aftereach added to all tests to fix a bug